--- a/app/matt-fyi/package.json
+++ b/app/matt-fyi/package.json
@@ -12,7 +12,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
     "gatsby": "^3.6.2",
+    "life": "0.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
