--- a/lib/life/package.json
+++ b/lib/life/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "lint": "echo 'no linting yet'"
+  }
 }
