--- a/lib/life/package.json
+++ b/lib/life/package.json
@@ -8,5 +8,8 @@
     "lint": "yarn lint:ts && yarn lint:eslint",
     "lint:eslint": "eslint '**/*.{js,ts,tsx}' --max-warnings 0",
     "lint:ts": "tsc"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.23"
   }
 }
