--- a/app/matt-fyi/package.json
+++ b/app/matt-fyi/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
+    "class-validator": "^0.13.1",
     "gatsby": "^3.6.2",
     "life": "0.0.1",
     "react": "^17.0.1",
