--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "skipLibCheck": true,
       "noUnusedLocals": true,
       "noUnusedParameters": true,
-      "removeComments": false
+      "removeComments": false,
+      "experimentalDecorators": true,
     }
   }
