--- a/app/matt-fyi/tsconfig.json
+++ b/app/matt-fyi/tsconfig.json
@@ -4,7 +4,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@life/*": ["../../lib/life/src/*"]
+      "@life/*": ["../../lib/life/src/*"],
+      "@util/*": ["../../lib/util/*"]
     },
   },
 }
