--- a/lib/life/tsconfig.json
+++ b/lib/life/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "../util/result.ts"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@life/*": ["src/*"]
+      "@life/*": ["src/*"],
+      "@util/*": ["../util/*"]
     }
   }
 }
