Use barrel files

--- a/lib/life/tsconfig.json
+++ b/lib/life/tsconfig.json
@@ -4,8 +4,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@life": ["src"],
       "@life/*": ["src/*"],
-      "@util/*": ["../util/*"]
+      "@util": ["../util"],
+      "@util/*": ["../util/*"],
     }
   }
 }
