--- a/app/matt-fyi/package.json
+++ b/app/matt-fyi/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "babel-preset-gatsby": "^1.8.0"
   }
 }
