--- a/app/matt-fyi/tsconfig.json
+++ b/app/matt-fyi/tsconfig.json
@@ -4,8 +4,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@life": ["../../lib/life/src"],
       "@life/*": ["../../lib/life/src/*"],
-      "@util/*": ["../../lib/util/*"]
+      "@util": ["../../lib/util"],
+      "@util/*": ["../../lib/util/*"],
     },
   },
 }
