--- a/app/matt-fyi/netlify.toml
+++ b/app/matt-fyi/netlify.toml
@@ -9,7 +9,7 @@
 publish = "public/"
 
 # Default build command.
-command = "yarn build"
+command = "yarn test-repo && yarn build"
 
 environment = { NETLIFY_USE_YARN="true", NODE_VERSION="14.16.1", YARN_VERSION="1.22.10" }
 
