--- a/app/matt-fyi/package.json
+++ b/app/matt-fyi/package.json
@@ -16,6 +16,8 @@
     "test-repo": "jest --config=../../jest.config.ts"
   },
   "dependencies": {
+    "ts-node": "^10.0.0",
+    "source-map-support": "^0.5.19",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "gatsby": "^3.6.2",
