--- a/app/matt-fyi/package.json
+++ b/app/matt-fyi/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
-    "lint": "yarn lint:ts && yarn lint:eslint",
+    "lint": "yarn lint:types && yarn lint:eslint",
     "lint:eslint": "eslint '**/*.{js,ts,tsx}' --max-warnings 0",
-    "lint:ts": "tsc",
+    "lint:types": "tsc",
     "build": "yarn lint && gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -26,6 +26,8 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "eslint-plugin-graphql": "^4.0.0",
+    "gatsby-plugin-typegen": "^2.2.4",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.3.2",
     "babel-preset-gatsby": "^1.8.0"
