--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "app/matt-fyi"
   ],
   "scripts": {
-    "lint": "yarn workspaces run lint:ts && yarn lint:eslint",
+    "lint": "yarn workspaces run lint:types && yarn lint:eslint",
     "lint:eslint": "eslint '**/*.{js,ts,tsx}' --max-warnings 0 --fix",
     "prepare": "husky install",
     "test": "jest"
