--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "workspaces": [
     "lib/life",
     "lib",
+    "app/store",
     "app/matt-fyi"
   ],
   "scripts": {
@@ -18,7 +19,9 @@
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
     "husky": "^6.0.0",
-    "lint-staged": "^11.0.0"
+    "lint-staged": "^11.0.0",
+    "apollo-server": "2.25.2",
+    "graphql": "14.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -30,6 +33,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.5",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "typescript": "^4.3.2"
   }
 }
