--- a/app/store/package.json
+++ b/app/store/package.json
@@ -10,12 +10,12 @@
   },
   "devDependencies": {
     "@types/webpack-env": "^1.16.2",
+    "gatsby-source-graphql": "^3.8.0",
     "dotenv": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "ts-loader": "^9.2.3",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2",
-    "webpack-merge": "^5.8.0",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-merge": "^5.8.0"
   }
 }
