--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "apollo-server": "2.25.2",
-    "graphql": "14.7.0"
+    "graphql": "^15.5.1"
+  },
+  "resolutions": {
+    "graphql": "^15.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -29,6 +32,7 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
     "@types/jest": "^26.0.23",
+    "webpack-node-externals": "^3.0.0",
     "babel-jest": "^27.0.5",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
