--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "lint": "yarn workspaces run lint:types && yarn lint:eslint",
     "lint:eslint": "eslint '**/*.{js,ts,tsx}' --max-warnings 0 --fix",
     "prepare": "husky install",
-    "test": "jest"
+    "test": "jest",
+    "build:matt-fyi": "start-server-and-test 'yarn workspace store build-and-start:prod' http-get://localhost:4000 'yarn workspace matt-fyi build'"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
+    "apollo-server": "2.25.2",
     "class-validator": "^0.13.1",
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
+    "graphql": "^15.5.1",
     "husky": "^6.0.0",
-    "lint-staged": "^11.0.0",
-    "apollo-server": "2.25.2",
-    "graphql": "^15.5.1"
+    "lint-staged": "^11.0.0"
   },
   "resolutions": {
     "graphql": "^15.5.1"
@@ -32,12 +33,14 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
     "@types/jest": "^26.0.23",
-    "webpack-node-externals": "^3.0.0",
     "babel-jest": "^27.0.5",
+    "cross-env": "^7.0.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.5",
     "prettier": "^2.3.1",
-    "typescript": "^4.3.2"
+    "start-server-and-test": "^1.12.6",
+    "typescript": "^4.3.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
