--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "app/matt-fyi"
   ],
   "scripts": {
+    "build:matt-fyi": "start-server-and-test 'yarn workspace store build-and-start:prod' http-get://localhost:4000 'yarn ci:matt-fyi && yarn workspace matt-fyi build'",
+    "ci:matt-fyi": "yarn lint && yarn test",
     "lint": "yarn workspaces run lint:types && yarn lint:eslint",
     "lint:eslint": "eslint '**/*.{js,ts,tsx}' --max-warnings 0 --fix",
     "prepare": "husky install",
-    "test": "jest",
-    "build:matt-fyi": "start-server-and-test 'yarn workspace store build-and-start:prod' http-get://localhost:4000 'yarn workspace matt-fyi build'"
+    "test": "jest"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.27.0",
