--- a/app/store/package.json
+++ b/app/store/package.json
@@ -13,6 +13,9 @@
     "build-and-start:prod": "yarn build:prod && yarn start:prod",
     "test": "jest"
   },
+  "dependencies": {
+    "life": "0.0.1"
+  },
   "devDependencies": {
     "@types/webpack-env": "^1.16.2",
     "gatsby-source-graphql": "^3.8.0",
