--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "graphql-scalars": "^1.10.0",
     "jest": "^27.0.5",
     "prettier": "^2.3.1",
     "start-server-and-test": "^1.12.6",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.3.2",
     "webpack-node-externals": "^3.0.0"
   }
