--- a/package.json
+++ b/package.json
@@ -14,36 +14,34 @@
     "prepare": "husky install",
     "test": "jest"
   },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
-    "apollo-server": "2.25.2",
-    "class-validator": "^0.13.1",
-    "eslint": "^7.28.0",
-    "eslint-plugin-react": "^7.24.0",
-    "graphql": "^15.5.1",
-    "husky": "^6.0.0",
-    "lint-staged": "^11.0.0"
-  },
   "resolutions": {
-    "graphql": "^15.5.1"
+    "graphql": "15.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/plugin-proposal-decorators": "^7.14.5",
-    "@babel/preset-env": "^7.14.7",
-    "@babel/preset-typescript": "^7.14.5",
-    "@types/jest": "^26.0.23",
-    "babel-jest": "^27.0.5",
-    "cross-env": "^7.0.3",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "graphql-scalars": "^1.10.0",
-    "jest": "^27.0.5",
-    "prettier": "^2.3.1",
-    "start-server-and-test": "^1.12.6",
-    "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "typescript": "^4.3.2",
-    "webpack-node-externals": "^3.0.0"
+    "@babel/core": "7.14.6",
+    "@babel/plugin-proposal-decorators": "7.14.5",
+    "@babel/preset-env": "7.14.7",
+    "@babel/preset-typescript": "7.14.5",
+    "@types/jest": "26.0.23",
+    "@typescript-eslint/eslint-plugin": "4.27.0",
+    "@typescript-eslint/parser": "4.27.0",
+    "apollo-server": "2.25.2",
+    "babel-jest": "27.0.5",
+    "class-validator": "0.13.1",
+    "cross-env": "7.0.3",
+    "eslint": "7.28.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-react": "7.24.0",
+    "graphql": "15.5.1",
+    "graphql-scalars": "1.10.0",
+    "husky": "6.0.0",
+    "jest": "27.0.5",
+    "lint-staged": "11.0.0",
+    "prettier": "2.3.1",
+    "start-server-and-test": "1.12.6",
+    "tsconfig-paths-webpack-plugin": "3.5.1",
+    "typescript": "4.3.2",
+    "webpack-node-externals": "3.0.0"
   }
 }
