--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,12 @@
       "noUnusedParameters": true,
       "removeComments": false,
       "experimentalDecorators": true,
+      "baseUrl": ".",
+      "paths": {
+        "@store": ["./app/store/src"],
+        "@store/*": ["./app/store/src/*"],
+        "@util": ["./lib/util"],
+        "@util/*": ["./lib/util/*"],
+      }
     }
   }
