--- a/app/content/package.json
+++ b/app/content/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "store",
+  "name": "content",
   "version": "0.0.1",
   "private": true,
-  "description": "In-memory store with GraphQL API",
+  "description": "Adds content to Store",
   "author": {
     "name": "Matt Schultz",
     "email": "hey@matt.fyi",
@@ -16,14 +16,7 @@
     "start": "cross-env NODE_ENV=production node dist/server"
   },
   "devDependencies": {
-    "@types/webpack-env": "1.16.2",
-    "clean-webpack-plugin": "4.0.0-alpha.0",
-    "concurrently": "6.2.0",
-    "gatsby-source-graphql": "3.8.0",
-    "life": "0.0.1",
-    "ts-loader": "9.2.3",
-    "webpack": "5.42.0",
-    "webpack-cli": "4.7.2",
-    "webpack-merge": "5.8.0"
+    "@apollo/client": "3.3.21",
+    "cross-fetch": "3.1.4"
   }
 }
