--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "@babel/plugin-proposal-decorators": "7.14.5",
     "@babel/preset-env": "7.14.7",
     "@babel/preset-typescript": "7.14.5",
+    "@graphql-codegen/cli": "1.21.7",
+    "@graphql-codegen/introspection": "1.18.2",
+    "@graphql-codegen/typescript": "1.23.0",
+    "@graphql-codegen/typescript-document-nodes": "1.17.16",
+    "@graphql-codegen/typescript-resolvers": "1.20.0",
     "@types/jest": "26.0.23",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
