Move graph resolvers and types to Life

--- a/lib/life/package.json
+++ b/lib/life/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "@types/jest": "26.0.23",
     "util": "0.0.1"
+  },
+  "scripts": {
+    "codegen": "yarn graphql-codegen --config graphql.yml",
+    "codegen:watch": "yarn graphql-codegen --config graphql.yml --watch"
   }
 }
