--- a/app/store/tsconfig.json
+++ b/app/store/tsconfig.json
@@ -79,5 +79,5 @@
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "../../lib/life/src/graph/graphql.d.ts"]
 }
