--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
       "experimentalDecorators": true,
       "baseUrl": ".",
       "paths": {
+        "@life": ["./lib/life/src"],
+        "@life/*": ["./lib/life/src/*"],
         "@store": ["./app/store/src"],
         "@store/*": ["./app/store/src/*"],
         "@util": ["./lib/util"],
