--- a/app/store/package.json
+++ b/app/store/package.json
@@ -12,8 +12,9 @@
     "build": "webpack --config webpack.production.js",
     "build:dev": "webpack --config webpack.development.js",
     "build:dev-watch": "webpack --env watch=true --config webpack.development.js",
-    "develop": "yarn build:dev && concurrently \"yarn build:dev-watch\" \"yarn start\"",
-    "start": "cross-env NODE_ENV=production node dist/server"
+    "develop": "yarn build:dev && concurrently \"yarn build:dev-watch\" \"yarn start:dev\"",
+    "start": "cross-env NODE_ENV=production node dist/server",
+    "start:dev": "cross-env NODE_ENV=development node dist/server"
   },
   "devDependencies": {
     "@types/webpack-env": "1.16.2",
