Run linting after build for typing
Gatsby GraphQL types are generated on build, so run the `ci` Yarn script
after building so the types can be used and verified.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "app/matt-fyi"
   ],
   "scripts": {
-    "build:matt-fyi": "start-server-and-test 'yarn workspace life codegen && yarn workspace store build && yarn workspace store start' http-get://localhost:4000 'yarn ci && yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi build'",
+    "build:matt-fyi": "start-server-and-test 'yarn workspace life codegen && yarn workspace store build && yarn workspace store start' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi build && yarn ci'",
     "ci": "yarn lint && yarn test",
     "lint": "yarn lint:types && yarn lint:eslint",
     "lint:eslint": "eslint '**/*.{js,ts,tsx}' --max-warnings 0 --fix",
