--- a/lib/life/graphql.yml
+++ b/lib/life/graphql.yml
@@ -3,7 +3,7 @@ overwrite: true
 schema: ./src/**/*.graphql
 documents: null
 generates:
-  src/generated/graphql.ts:
+  src/__generated__/graphql.ts:
     plugins:
       - 'typescript'
       - 'typescript-resolvers'
