--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jest": "26.0.23",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
+    "apollo": "^2.33.4",
     "apollo-server": "3.0.2",
     "babel-jest": "27.0.5",
     "class-validator": "0.13.1",
