Add unit tests for risk domain object
Also
- Add jest watch mode script
- Add jest VSCode debug config
- Update id, name, and parent validation in risk domain object

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint:eslint": "eslint '**/*.{js,ts,tsx}' --max-warnings 0 --fix",
     "lint:types": "tsc",
     "prepare": "husky install",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "resolutions": {
     "graphql": "15.5.1"
