--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cross-env": "7.0.3",
     "eslint": "7.28.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
     "graphql": "15.5.1",
