--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,13 @@
       "lib": ["dom", "es2015", "es2017"],
       "strict": true,
       "noEmit": true,
-      // "isolatedModules": true, // disabled because gatsby-plugin-typegen exports global types
+      "isolatedModules": true, // disabled because gatsby-plugin-typegen exports global types
       "esModuleInterop": true,
       "skipLibCheck": true,
       "noUnusedLocals": true,
+      "alwaysStrict": true,
       "noUnusedParameters": true,
+      "forceConsistentCasingInFileNames": true,
       "removeComments": false,
       "experimentalDecorators": true,
       "baseUrl": ".",
