--- a/app/store/tsconfig.json
+++ b/app/store/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "lib": ["dom","es6"],
+    "lib": ["es2020"],
     "outDir": "dist",
     "noEmit": false,
   },
