--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "module": "commonjs",
       "target": "es6",
       "jsx": "preserve",
-      "lib": ["dom", "es2015", "es2017"],
+      "lib": ["dom", "es2020"],
       "strict": true,
       "noEmit": true,
       "isolatedModules": true, // disabled because gatsby-plugin-typegen exports global types
