--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cross-env": "7.0.3",
     "eslint": "7.28.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-node": "^11.1.0",
