--- a/app/matt-fyi/package.json
+++ b/app/matt-fyi/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "gatsby-plugin-mdx": "2.13.0",
     "@types/react-dom": "17.0.7",
     "babel-preset-gatsby": "1.8.0",
     "eslint-plugin-graphql": "4.0.0",
