--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build:matt-fyi": "start-server-and-test 'yarn ci && yarn workspace store build && yarn workspace store start' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi build'",
-    "develop:matt-fyi": "start-server-and-test 'yarn ci && yarn workspace store develop' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi develop'",
+    "develop:matt-fyi": "start-server-and-test 'yarn workspace store develop' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi develop'",
     "ci": "yarn lint && yarn test",
     "lint": "yarn lint:types && yarn lint:eslint",
     "lint:eslint": "eslint '**/*.{js,ts,tsx}' --max-warnings 0 --fix",
@@ -25,6 +25,7 @@
     "@babel/core": "7.14.6",
     "@babel/eslint-parser": "^7.15.0",
     "@babel/plugin-proposal-decorators": "7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
     "@babel/preset-env": "7.14.7",
     "@babel/preset-typescript": "7.14.5",
     "@graphql-codegen/cli": "1.21.7",
@@ -32,12 +33,18 @@
     "@graphql-codegen/typescript": "1.23.0",
     "@graphql-codegen/typescript-document-nodes": "1.17.16",
     "@graphql-codegen/typescript-resolvers": "1.20.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@types/jest": "26.0.23",
+    "@types/mdx-js__react": "^1.5.4",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "apollo": "^2.33.4",
     "apollo-server": "3.0.2",
     "babel-jest": "27.0.5",
+    "babel-plugin-html-attributes-to-jsx": "^1.6.22",
+    "babel-plugin-pluck-imports": "^0.0.1",
+    "babel-plugin-remove-export-keywords": "^1.6.22",
     "class-validator": "0.13.1",
     "cross-env": "7.0.3",
     "eslint": "7.28.0",
