WIP Add images in MDX support
I stopped work on this for 2.5 months and left these changes unstaged :(

If I recall correctly: I was trying to pass MDX with images from
the content app, into the store, and then retrieve from matt.fyi. I
don't believe it was working.

It's possible some parts of this code work and I might even need or
want them.

--- a/graphql.config.yml
+++ b/graphql.config.yml
@@ -5,7 +5,7 @@
 # Seems like it may be fixed in an upcoming release of vscode-graphql extension (current: 0.3.16).
 # Possibly related issues: https://github.com/dotansimha/graphql-eslint/issues/526, https://github.com/graphql/vscode-graphql/issues/316, https://github.com/cometkim/gatsby-plugin-typegen/issues/113
 projects:
-  # life:
-  #   schema: lib/life/src/api/graph/schema.graphql
-  matt-fyi:
-    schema: app/matt-fyi/src/__generated__/gatsby-introspection.json
+  life:
+    schema: lib/life/src/api/graph/schema.graphql
+  # matt-fyi:
+  #   schema: app/matt-fyi/src/__generated__/gatsby-introspection.json
