--- a/app/matt-fyi/package.json
+++ b/app/matt-fyi/package.json
@@ -15,6 +15,8 @@
     "serve": "gatsby serve"
   },
   "devDependencies": {
+    "gatsby-source-filesystem": "3.13.0",
+    "gatsby-transformer-remark": "4.10.0",
     "@types/react": "17.0.11",
     "gatsby-plugin-mdx": "2.13.0",
     "@types/react-dom": "17.0.7",
