--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build:matt-fyi": "start-server-and-test 'yarn ci && yarn workspace store build && yarn workspace store start' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi build'",
     "develop:matt-fyi": "start-server-and-test 'yarn workspace store develop' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi develop'",
+    "develop:matt-fyi:store": "start-server-and-test 'yarn workspace store develop' http-get://localhost:4000 'yarn workspace content develop'",
     "ci": "yarn lint && yarn test",
     "lint": "yarn lint:types && yarn lint:eslint",
     "lint:eslint": "eslint '**/*.{js,ts,tsx}' --max-warnings 0 --fix",
@@ -40,11 +41,17 @@
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "apollo": "^2.33.4",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
     "apollo-server": "3.0.2",
+    "apollo-utilities": "^1.3.4",
     "babel-jest": "27.0.5",
     "babel-plugin-html-attributes-to-jsx": "^1.6.22",
     "babel-plugin-pluck-imports": "^0.0.1",
     "babel-plugin-remove-export-keywords": "^1.6.22",
+    "base64-js": "^1.5.1",
     "class-validator": "0.13.1",
     "cross-env": "7.0.3",
     "eslint": "7.28.0",
@@ -57,9 +64,11 @@
     "eslint-plugin-react": "7.24.0",
     "graphql": "15.5.1",
     "graphql-scalars": "1.10.0",
+    "graphql-tag": "^2.12.5",
     "husky": "6.0.0",
     "jest": "27.0.5",
     "lint-staged": "11.0.0",
+    "node-fetch": "2.6.2",
     "prettier": "2.3.1",
     "start-server-and-test": "1.12.6",
     "tsconfig-paths-webpack-plugin": "3.5.1",
