--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "graphql-scalars": "1.10.0",
     "husky": "6.0.0",
     "jest": "27.0.5",
+    "jest-mock-extended": "2.0.4",
     "jest-transform-graphql": "^2.1.0",
     "lint-staged": "11.0.0",
     "prettier": "2.3.1",
