--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lint:types": "tsc",
     "prepare": "husky install",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "resolutions": {
     "graphql": "15.5.1"
@@ -35,6 +37,10 @@
     "@graphql-codegen/typescript-resolvers": "1.20.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/react": "^6.4.9",
     "@types/jest": "26.0.23",
     "@types/mdx-js__react": "^1.5.4",
     "@typescript-eslint/eslint-plugin": "4.27.0",
@@ -42,6 +48,7 @@
     "apollo": "^2.33.4",
     "apollo-server": "3.0.2",
     "babel-jest": "27.0.5",
+    "babel-loader": "^8.2.3",
     "babel-plugin-html-attributes-to-jsx": "^1.6.22",
     "babel-plugin-pluck-imports": "^0.0.1",
     "babel-plugin-remove-export-keywords": "^1.6.22",
@@ -67,5 +74,6 @@
     "tsconfig-paths-webpack-plugin": "3.5.1",
     "typescript": "4.3.2",
     "webpack-node-externals": "3.0.0"
-  }
+  },
+  "dependencies": {}
 }
