Add Button to component lib proxied from Grommet
- Modifies Storybook config to use base TS config.

- Adds a theme with provider, proxying Grommet's provider.

- Updates the Button story.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "experimentalDecorators": true,
       "baseUrl": ".",
       "paths": {
+        "@component/*": ["./lib/component/*"],
         "@life/*": ["./lib/life/src/*"],
         "@store/*": ["./app/store/src/*"],
         "@util/*": ["./lib/util/*"],
