--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-react": "7.24.0",
     "graphql": "15.5.1",
     "graphql-scalars": "1.10.0",
+    "grommet": "2.19.1",
     "husky": "6.0.0",
     "jest": "27.0.5",
     "jest-mock-extended": "2.0.4",
@@ -71,6 +72,7 @@
     "lint-staged": "11.0.0",
     "prettier": "2.3.1",
     "start-server-and-test": "1.12.6",
+    "styled-components": "5.3.3",
     "tsconfig-paths-webpack-plugin": "3.5.1",
     "typescript": "4.3.2",
     "webpack-node-externals": "3.0.0"
