Move clean-webpack-plugin package to root
Moves the plugin from store to root, as it's also used by the content
app. This fixes an ESLint error about the package being missing.

--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "@babel/preset-typescript": "7.14.5",
     "@graphql-codegen/cli": "1.21.7",
     "@graphql-codegen/introspection": "1.18.2",
-    "@graphql-codegen/typescript": "1.23.0",
     "@graphql-codegen/typescript-document-nodes": "1.17.16",
     "@graphql-codegen/typescript-resolvers": "1.20.0",
+    "@graphql-codegen/typescript": "1.23.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@storybook/addon-actions": "^6.4.9",
@@ -45,16 +45,16 @@
     "@types/mdx-js__react": "^1.5.4",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
-    "apollo": "^2.33.4",
     "apollo-server": "3.0.2",
+    "apollo": "^2.33.4",
     "babel-jest": "27.0.5",
     "babel-loader": "^8.2.3",
     "babel-plugin-html-attributes-to-jsx": "^1.6.22",
     "babel-plugin-pluck-imports": "^0.0.1",
     "babel-plugin-remove-export-keywords": "^1.6.22",
     "class-validator": "0.13.1",
+    "clean-webpack-plugin": "4.0.0-alpha.0",
     "cross-env": "7.0.3",
-    "eslint": "7.28.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.24.0",
@@ -62,13 +62,14 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
-    "graphql": "15.5.1",
+    "eslint": "7.28.0",
     "graphql-scalars": "1.10.0",
+    "graphql": "15.5.1",
     "grommet": "2.19.1",
     "husky": "6.0.0",
-    "jest": "27.0.5",
     "jest-mock-extended": "2.0.4",
     "jest-transform-graphql": "^2.1.0",
+    "jest": "27.0.5",
     "lint-staged": "11.0.0",
     "prettier": "2.3.1",
     "start-server-and-test": "1.12.6",
