--- a/app/store/package.json
+++ b/app/store/package.json
@@ -21,9 +21,6 @@
     "concurrently": "6.2.0",
     "gatsby-source-graphql": "3.8.0",
     "life": "0.0.1",
-    "ts-loader": "9.2.3",
-    "webpack": "5.42.0",
-    "webpack-cli": "4.7.2",
-    "webpack-merge": "5.8.0"
+    "ts-loader": "9.2.3"
   }
 }
