--- a/package.json
+++ b/package.json
@@ -76,7 +76,10 @@
     "styled-components": "5.3.3",
     "tsconfig-paths-webpack-plugin": "3.5.1",
     "typescript": "4.3.2",
-    "webpack-node-externals": "3.0.0"
+    "webpack-cli": "4.7.2",
+    "webpack-merge": "5.8.0",
+    "webpack-node-externals": "3.0.0",
+    "webpack": "5.42.0"
   },
   "dependencies": {}
 }
