Add simple internationalisation test implementation
Installs gatsby-plugin-layout to support consistent layouts or wrapper
components for all pages, to be used for internationalisation
providers.

Adds react-i18next with a test translation in a new Layout component.

--- a/app/matt-fyi/package.json
+++ b/app/matt-fyi/package.json
@@ -21,6 +21,7 @@
     "babel-preset-gatsby": "1.8.0",
     "eslint-plugin-graphql": "4.0.0",
     "gatsby": "3.13.1",
+    "gatsby-plugin-layout": "3.3.0",
     "gatsby-plugin-typegen": "2.2.4",
     "life": "0.0.1",
     "react": "17.0.1",
