--- a/package.json
+++ b/package.json
@@ -67,11 +67,13 @@
     "graphql": "15.5.1",
     "grommet": "2.19.1",
     "husky": "6.0.0",
+    "i18next": "21.6.0",
     "jest-mock-extended": "2.0.4",
     "jest-transform-graphql": "^2.1.0",
     "jest": "27.0.5",
     "lint-staged": "11.0.0",
     "prettier": "2.3.1",
+    "react-i18next": "11.15.0",
     "start-server-and-test": "1.12.6",
     "styled-components": "5.3.3",
     "tsconfig-paths-webpack-plugin": "3.5.1",
