--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@storybook/react": "^6.4.9",
     "@types/jest": "26.0.23",
     "@types/mdx-js__react": "^1.5.4",
+    "@types/react-dom": "17.0.7",
+    "@types/react": "17.0.11",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "apollo-server": "3.0.2",
@@ -73,7 +75,9 @@
     "jest": "27.0.5",
     "lint-staged": "11.0.0",
     "prettier": "2.3.1",
+    "react-dom": "17.0.1",
     "react-i18next": "11.15.0",
+    "react": "17.0.1",
     "start-server-and-test": "1.12.6",
     "styled-components": "5.3.3",
     "tsconfig-paths-webpack-plugin": "3.5.1",
