--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "strict": true,
       "noEmit": true,
       "isolatedModules": true, // disabled because gatsby-plugin-typegen exports global types
+      "resolveJsonModule": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
       "noUnusedLocals": true,
