--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/plugin-proposal-decorators": "7.14.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
     "@babel/preset-env": "7.14.7",
+    "@babel/preset-react": "7.16.5",
     "@babel/preset-typescript": "7.14.5",
     "@graphql-codegen/cli": "1.21.7",
     "@graphql-codegen/introspection": "1.18.2",
@@ -41,6 +42,7 @@
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
     "@storybook/react": "^6.4.9",
+    "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "26.0.23",
     "@types/mdx-js__react": "^1.5.4",
     "@types/react-dom": "17.0.7",
@@ -77,6 +79,7 @@
     "prettier": "2.3.1",
     "react-dom": "17.0.1",
     "react-i18next": "11.15.0",
+    "react-test-renderer": "17.0.1",
     "react": "17.0.1",
     "start-server-and-test": "1.12.6",
     "styled-components": "5.3.3",
