--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/mdx-js__react": "^1.5.4",
     "@types/react-dom": "17.0.7",
     "@types/react": "17.0.11",
+    "@types/styled-components": "5.1.18",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "apollo-server": "3.0.2",
