Add visual regression tests to Github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,8 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  static-unit:
+    name: 'Static analysis and unit tests'
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -38,3 +39,29 @@ jobs:
 
       - name: Unit tests
         run: yarn test:unit
+
+  visual-reg:
+    name: 'Visual regression tests'
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js version
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.16.1'
+
+      - name: Install dependencies
+        run: yarn --frozen-lockfile --non-interactive --silent
+
+      - name: Visual regression tests
+        run: yarn test:visreg
+
+      - name: Upload visual regression screenshots
+        if: failure()
+        uses: actions/upload-artifact@v2.3.1
+        with:
+          name: screenshots
+          path: .loki
+          retention-days: 90 # 90 is default
