Add deploy job to Github workflow
Renames workflow and removes default comments.

--- a/.github/workflows/matt-fyi-cd.yml
+++ b/.github/workflows/matt-fyi-cd.yml
@@ -1,29 +1,17 @@
-# This is a basic workflow to help you get started with Actions
+name: matt.fyi CD
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [main]
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   static-unit:
     name: 'Static analysis and unit tests'
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
       - name: Use Node.js version
@@ -33,7 +21,7 @@ jobs:
 
       - name: Install dependencies
         run: yarn --frozen-lockfile --non-interactive --silent
-        
+
       - name: Lint
         run: yarn lint
 
@@ -65,3 +53,29 @@ jobs:
           name: screenshots
           path: .loki
           retention-days: 90 # 90 is default
+
+  deploy:
+    name: 'Deploy to Netlify'
+    runs-on: ubuntu-latest
+    needs: [static-unit, visual-reg]
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js version
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.16.1'
+
+      - name: Install dependencies
+        run: yarn --frozen-lockfile --non-interactive --silent
+
+      - name: Build
+        run: yarn build:matt-fyi
+
+      - name: Deploy
+        uses: netlify/actions/cli@master # TODO: tie to specific commit
+        with:
+          args: deploy --dir=app/matt-fyi/public --prod
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
