--- a/package.json
+++ b/package.json
@@ -8,19 +8,16 @@
     "app/matt-fyi"
   ],
   "scripts": {
-    "build:matt-fyi": "start-server-and-test 'yarn ci && yarn workspace store build && yarn workspace store start' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi build'",
+    "build:matt-fyi": "start-server-and-test 'yarn workspace store build && yarn workspace store start' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi build'",
     "develop:matt-fyi": "start-server-and-test 'yarn workspace store develop' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi develop'",
-    "ci": "yarn lint && yarn test",
-    "lint": "yarn lint:types && yarn lint:eslint",
     "lint:eslint": "eslint '**/*.{js,ts,tsx}' --max-warnings 0 --fix",
     "lint:types": "tsc",
+    "lint": "yarn lint:types && yarn lint:eslint",
     "prepare": "husky install",
-    "test": "yarn test:unit && yarn test:visreg",
+    "storybook:build": "build-storybook",
+    "storybook:start": "start-storybook -p 6006",
     "test:unit": "jest",
-    "test:visreg": "build-storybook --quiet && loki --requireReference --reactUri file:./storybook-static",
-    "test:watch": "jest --watch",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "test:visreg": "build-storybook --quiet && loki --requireReference --reactUri file:./storybook-static"
   },
   "resolutions": {
     "graphql": "15.5.1"
