--- a/.github/workflows/matt-fyi-cd.yml
+++ b/.github/workflows/matt-fyi-cd.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14.16.1'
+          cache: 'yarn'
 
       - name: Install dependencies
         run: yarn --frozen-lockfile --non-interactive --silent
@@ -39,6 +40,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14.16.1'
+          cache: 'yarn'
 
       - name: Install dependencies
         run: yarn --frozen-lockfile --non-interactive --silent
@@ -65,6 +67,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14.16.1'
+          cache: 'yarn'
 
       - name: Install dependencies
         run: yarn --frozen-lockfile --non-interactive --silent
