Re-add Netlify deploy step to the deploy job
Modifies the matt-fyi index page to test that the build works as
expected.

--- a/.github/workflows/matt-fyi-cd.yml
+++ b/.github/workflows/matt-fyi-cd.yml
@@ -93,14 +93,10 @@ jobs:
           name: build-files
           path: build-files
 
-      - name: Display structure of downloaded files
-        run: ls -R
-        working-directory: build-files
-
-      # - name: Deploy
-      #   uses: netlify/actions/cli@master # TODO: tie to specific commit
-      #   with:
-      #     args: deploy --dir=build-files --prod
-      #   env:
-      #     NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-      #     NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      - name: Deploy
+        uses: netlify/actions/cli@master # TODO: tie to specific commit
+        with:
+          args: deploy --dir=build-files --prod
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
